k8/spartan-service.yml
apiVersion: v1
kind: Service

metadata:
  labels:
    app: spartan-app
  name: spartan-service
  namespace: default
  
spec:
  ports:
  - nodePort: 30001
    port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: spartan-app
  type: LoadBalancer
